Minimap Z level now has a shadow Fixed an issue causing RP stuckage Minimap Z level now auto updates in netcode Fixed minimap cells going out of range

--- a/public/style.css
+++ b/public/style.css
@@ -3063,6 +3063,10 @@ div.fxBuffRed{
 		display: none;
 	}
 
+	#miniMap > div.top > div.zLevel{
+		text-shadow: 1px 1px 1px #000;
+	}
+
 	#miniMap > div.top > div{
 		
 		margin-left:1px;
